--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -1,3 +1,11 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+%% Created for Kyle Niemeyer at 2016-01-14 09:33:17 -0800 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
 
 @string{academic = {Academic Press}}
 
@@ -204,6 +212,22 @@
 @string{zangewmathphys = {Z. Angew. Math. Phys.}}
 
 
+@misc{Nature,
+	Author = {{Nature Publishing Group}},
+	Date-Added = {2016-01-14 17:32:33 +0000},
+	Date-Modified = {2016-01-14 17:33:17 +0000},
+	Howpublished = {\url{http://www.nature.com/nature/authors/gta/#a5.4}},
+	Note = {Accessed: 2016-01-14},
+	Title = {{Nature} Manuscript Formatting Guide}}
+
+@misc{AAAS,
+	Author = {{AAAS}},
+	Date-Added = {2016-01-14 17:31:01 +0000},
+	Date-Modified = {2016-01-14 17:32:19 +0000},
+	Howpublished = {\url{http://www.sciencemag.org/site/feature/contribinfo/prep/res/refs.xhtml}},
+	Note = {Accessed: 2016-01-14},
+	Title = {Science Reference Style}}
+
 @misc{PaperBadger,
 	Author = {{Mozilla Science Lab}},
 	Date-Added = {2016-01-13 07:14:55 +0000},
@@ -280,11 +304,12 @@
 	Author = {Howison, James and Bullard, Julia},
 	Date-Added = {2016-01-11 23:48:00 +0000},
 	Date-Modified = {2016-01-13 07:35:26 +0000},
+	Doi = {10.1002/asi.23538},
 	Journal = {Journal of the Association for Information Science and Technology},
 	Note = {In press},
 	Title = {Software in the scientific literature: {Problems} with seeing, finding, and using software mentioned in the biology literature},
 	Year = {2015},
-    Doi = {10.1002/asi.23538}}
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/asi.23538}}
 
 @techreport{wssspe2_petre,
 	Author = {Marian Petre and Greg Wilson},
@@ -310,6 +335,7 @@
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Hilmar Lapp and Ketan Maheshwari and Frank L\"{o}ffler and Matthew Turk and Marcus Hanwell and Nancy Wilkins-Diehr and James Hetherington and James Howison and Shel Swenson and Gabrielle Allen and Anne Elster and Bruce Berriman and Colin Venters},
 	Date-Added = {2016-01-11 21:38:36 +0000},
 	Date-Modified = {2016-01-12 08:44:20 +0000},
+	Doi = {10.5334/jors.an},
 	Issn = {2049-9647},
 	Journal = {Journal of Open Research Software},
 	Keywords = {sustainability; software development; policy; career paths},
@@ -318,7 +344,7 @@
 	Title = {Summary of the First Workshop on Sustainable Software for Science: Practice and Experiences ({WSSSPE1})},
 	Volume = {2},
 	Year = {2014},
-    Doi = {10.5334/jors.an}}
+	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.an}}
 
 @article{WSSSPE3,
 	Author = {Daniel S. Katz and Kyle E. Niemeyer and Sou-Cheng T. Choi and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
@@ -342,9 +368,10 @@
 	Author = {Daniel S. Katz and Arfon M Smith},
 	Date-Added = {2016-01-05 07:44:29 +0000},
 	Date-Modified = {2016-01-13 07:35:26 +0000},
+	Doi = {10.5334/jors.by},
 	Journal = {Journal of Open Research Software},
 	Pages = {e7},
 	Title = {{Transitive Credit} and {JSON-LD}},
 	Volume = {3},
 	Year = {2015},
-    Doi = {10.5334/jors.by}}
+	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.by}}
