small wording changes and notes

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -162,7 +162,7 @@ Computation Institute, University of Chicago \& Argonne National Laboratory.
 Modern science and engineering depend on software. 
 To acknowledge traditional research results published in archival journals and conferences, we use citation, but no such accepted standard exists to credit the considerable efforts that go into software.
 One method to increase the amount of software developed and shared is to treat a software release as a publication. 
-In addition, since research data now depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility.
+In addition, since research data \note{Dan liked `results' better than data} now depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility.
 \textbf{The main challenge of software citation is that we need a way to uniquely identify released (published) software so that it can be cited by others who use it.}
 We also need a process to curate and review software.  
 
@@ -200,10 +200,10 @@ Key challenges include the need to:
 \item develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem, and
 \item determine standard practices for peer review of software.
 \end{itemize}
-\note{May need transition from the list to these suggestions}
-Individual citation formats will vary based on the particular style of journals, conferences, or professional societies, but citation of software in publications should minimally include software name, primary authors\slash contributors, DOI or other unique identifier, and location where the software has been published\slash archived (DOI or URL). 
-Metadata needed for software to be cited includes similar information, in addition to authors and software dependencies via digital identifiers (e.g., ORCID, DOI).
-This information should be provided in a CITATION file, potentially in JSON, XML, or DOAP (RDF\slash XML) formats---rather than or to supplement plaintext---to allow automatic processing\slash parsing.
+\note{May need transition from the list to these suggestions - maybe something that says `research directions'?}
+Citation of software in publications should minimally include software name, primary authors\slash contributors, DOI or other unique identifier, and location where the software has been published\slash archived (DOI or URL); however, individual citation formats will vary based on the particular style of journals, conferences, or professional societies. 
+Metadata needed for software to be cited includes similar information, in addition to authors and software dependencies via digital identifiers (e.g., ORCID, DOI). \note{what should be discussed first: metadata or citation?}
+This information should be provided in a CITATION file, potentially in JSON, XML, or DOAP (RDF\slash XML) formats---to replace or to supplement plaintext---to allow automatic processing\slash parsing.
 
 However, additional research and development efforts are needed to solve the remaining challenges.
 These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the the software itself is not preserved?
