rethinking and trying to find common ground

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -162,7 +162,7 @@ Computation Institute, University of Chicago \& Argonne National Laboratory.
 Modern science and engineering depend on software. 
 To acknowledge traditional research results published in archival journals and conferences, we use citation, but no such accepted standard exists to credit the considerable efforts that go into software.
 One method to increase the amount of software developed and shared is to treat a software release as a publication. 
-In addition, since research results \note{Kyle is fine with results, but thought data may fit better with the journal} now depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility.
+In addition, since research results, including data, now depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility.
 \textbf{The main challenge of software citation is that we need a way to uniquely identify released (published) software so that it can be cited by others who use it.}
 We also need a process to curate and review software.  
 
