--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -135,8 +135,8 @@ DANIEL S. KATZ
 % The remaining information (journal title, volume, article number, date, etc.) is 'auto-generated'.
 
 \begin{bottomstuff}
-Work by D.\ S.\ Katz was supported by the National Science Foundation (NSF) while working at the Foundation; any opinion, finding, and conclusions or recommendations expressed in this material are those of the author and do not necessarily reflect the views of the NSF.
 Some work by K.\ E.\ Niemeyer was supported by NSF grant ACI-1535065.
+Work by D.\ S.\ Katz was supported by the National Science Foundation (NSF) while working at the Foundation; any opinion, finding, and conclusions or recommendations expressed in this material are those of the author and do not necessarily reflect the views of the NSF.
 
 Author's addresses: K.\ E.\ Niemeyer, School of Mechanical, Industrial, and Manufacturing Engineering, Oregon State University; 
 A.\ M.\ Smith,
@@ -203,17 +203,18 @@ Key challenges and research directions include the need to:
 
 For software to be cited, we recommend that metadata include software name, primary authors\slash contributors (name and ORCID), DOI or other unique identifier, location where the software has been published\slash archived (DOI or URL), and software dependencies (via DOI).
 This information should be provided in a CITATION file, potentially in JSON, XML, or DOAP (RDF\slash XML) formats---to replace or to supplement plaintext---to allow automatic processing\slash parsing.
-Then, citation of software in publications should minimally include software name, primary authors, and DOI or location where the software has been published\slash archived; however, individual citation formats will vary based on the particular style of journals, conferences, or professional societies. 
+Citations of software in publications should minimally include software name, primary authors, and DOI or location where the software has been published\slash archived; however, individual citation formats will vary based on the particular style of journals, conferences, or professional societies.
+Technical solutions to these challenges exist; what needed is community acceptance. 
 
 However, research and development efforts are needed to solve the remaining challenges.
-These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the the software itself is not preserved?
-In order for software citations to carry weight akin to publications for academic credit and reputation, they require indexing to create a similar citation network (e.g., Web of Science, Scopus, Google Scholar).
+These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the the software itself is not publicly preserved?
+How will index services (e.g., Web of Science, Scopus, Google Scholar) fully index software, since in order for software citations to carry weight akin to publications for academic credit and reputation, they require such indexing to create a similar citation network?
 How can publications indicate direct use of software for research in citations, where results would not be possible without efforts of software authors?
-Should this citation be ``weighed'' higher than others?
+Should such a citation be ``weighted'' higher than others?
 The \citeN{AAS:2016} suggests a new ``Software'' section below the acknowledgements; other approaches include machine-readable supplementary data~\cite{Katz:2015aa}.
 
 Finally, open questions remain on whether citable software should go through peer review and, if so, how can this be implemented?
-Instead, should citable software follow the arXiv preprint model where releases are made available for users and the community to judge, or alternatively the software paper model where ``advertising'' papers undergo peer review in a relevant community?
+Should citable software itself follow the arXiv preprint model where releases are made available for users and the community to judge, or alternatively, the software paper model where ``advertising'' papers undergo peer review in a relevant community?
 
 
 % Acknowledgments
