DOAP would work for XML or JSON here.

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -202,7 +202,7 @@ Key challenges and research directions include the need to:
 \end{itemize}
 
 For software to be cited, we recommend that metadata include software name, primary authors\slash contributors (name and ORCID), DOI or other unique identifier, location where the software has been published\slash archived (DOI or URL), and software dependencies (via DOI).
-This information should be provided in a CITATION file, potentially in JSON, XML, or DOAP (RDF\slash XML) formats---to replace or to supplement plaintext---to allow automatic processing\slash parsing.
+This information should be provided in a CITATION file, potentially in JSON or XML (and with an appropriate metadata schema e.g. DOAP) formats---to replace or to supplement plaintext---to allow automatic processing\slash parsing.
 Citations of software in publications should minimally include software name, primary authors, and DOI or location where the software has been published\slash archived; however, individual citation formats will vary based on the particular style of journals, conferences, or professional societies.
 Technical solutions to these challenges exist; what needed is community acceptance. 
 
