Comment about software citing other software

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -196,6 +196,7 @@ Key challenges and research directions include the need to:
 \item identify necessary metadata associated with software for citation, 
 \item standardize proper formats for citing software in publications,
 \item establish mechanisms for software to cite other software (i.e., dependencies),
+% I feel like we should point out that this problem has been solved by multiple communities already (Node.js/NPM, Ruby/Gemfile)
 \item develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem,
 \item determine standard practices for peer review of software, and
 \item increase cultural acceptance of the concept of software as a digital product.
