--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -197,6 +197,7 @@ Key challenges and research directions include the need to:
 \item standardize proper formats for citing software in publications,
 \item establish mechanisms for software to cite other software (i.e., dependencies),
 % I feel like we should point out that this problem has been solved by multiple communities already (Node.js/NPM, Ruby/Gemfile)
+% Also, perhaps we should cite existing efforts around automating this including https://libraries.io & http://depsy.org?
 \item develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem,
 \item determine standard practices for peer review of software, and
 \item increase cultural acceptance of the concept of software as a digital product.
