--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -281,6 +281,14 @@
 	Title = {{CodeMeta}},
 	Year = {2016}}
 
+@misc{GitHubZenodo,
+	Author = {{GitHub Inc.}},
+	Date-Added = {2014-04-14 00:00:00 +0000},
+	Howpublished = {\url{https://guides.github.com/activities/citable-code/}},
+	Note = {Accessed: 2016-01-17},
+	Title = {Making Your Code Citable},
+	Year = {2014}}
+
 @article{WSSSPE2,
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Nancy Wilkins-Diehr and Neil {Chue Hong} and Colin C. Venters and James Howison and Frank J. Seinstra and Matthew Jones and Karen Cranston and Thomas L. Clune and Miguel de Val{-}Borro and Richard Littauer},
 	Date-Added = {2016-01-12 08:45:29 +0000},
