--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -213,7 +213,7 @@ These questions include: how can we cite closed-source\slash commercial software
 How will index services (e.g., Web of Science, Scopus, Google Scholar) fully index software, since in order for software citations to carry weight akin to publications for academic credit and reputation, they require such indexing to create a similar citation network?
 How can publications indicate direct use of software for research in citations, where results would not be possible without efforts of software authors?
 Should such a citation be ``weighted'' higher than others?
-The \citeN{AAS:2016} suggests a new ``Software'' section below the acknowledgements; other approaches include machine-readable supplementany data~\cite{Katz:2015aa}.
+The \citeN{AAS:2016} suggests a new ``Software'' section below the acknowledgements; other approaches include machine-readable supplementary data~\cite{Katz:2015aa}.
 
 Finally, open questions remain on whether citable software should go through peer review and, if so, how can this be implemented?
 Should citable software itself follow the arXiv preprint model where releases are made available for users and the community to judge, or alternatively, the software paper model where ``advertising'' papers undergo peer review in a relevant community?
