fix wording in citation/metadata para

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -198,7 +198,7 @@ Key challenges and research directions include the need to:
 For software to be cited, we recommend that metadata include software name, primary authors\slash contributors (name and ORCID), DOI or other unique identifier, location where the software has been published\slash archived (DOI\slash URL), and software dependencies (via DOI).
 This information should be provided in a CITATION file, potentially in JSON or XML (and with an appropriate metadata schema, e.g., DOAP) format---to replace or supplement plaintext---to allow automatic processing\slash parsing.
 Citations of software in publications should minimally include software name, primary authors, and DOI or location where the software has been published\slash archived; however, individual citation formats will vary based on the particular style of journals, conferences, or professional societies.
-Technical solutions to these challenges exist; what needed is community acceptance.
+Technical solutions to these challenges exist; community acceptance is instead needed.
 
 However, research and development efforts are needed to solve the remaining challenges.
 These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the the software itself is not publicly preserved?
