--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -1,11 +1,3 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-
-%% Created for Kyle Niemeyer at 2016-01-14 09:33:17 -0800
-
-
-%% Saved with string encoding Unicode (UTF-8)
-
 
 @string{academic = {Academic Press}}
 
@@ -211,6 +203,24 @@
 
 @string{zangewmathphys = {Z. Angew. Math. Phys.}}
 
+
+@misc{Depsy,
+	Author = {Jason Priem and Heather Piwowar},
+	Date-Added = {2016-01-17 18:56:31 +0000},
+	Date-Modified = {2016-01-17 18:58:58 +0000},
+	Howpublished = {\url{http://depsy.org}},
+	Note = {Accessed: 2016-01-17},
+	Title = {Depsy},
+	Year = {2015}}
+
+@misc{Libraries.io,
+	Author = {Andrew Nesbitt and Mauro Pompilio},
+	Date-Added = {2016-01-17 18:55:18 +0000},
+	Date-Modified = {2016-01-17 19:03:49 +0000},
+	Howpublished = {\url{https://libraries.io}},
+	Note = {Accessed: 2016-01-17},
+	Title = {{Libraries.io}},
+	Year = {2016}}
 
 @misc{Nature,
 	Author = {{Nature Publishing Group}},
