--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -142,7 +142,8 @@ Author's addresses: K.\ E.\ Niemeyer, School of Mechanical, Industrial, and Manu
 A.\ M.\ Smith,
 GitHub, Inc.;
 D.\ S.\ Katz,
-Computation Institute, University of Chicago \& Argonne National Laboratory.
+Computation Institute, University of Chicago \& Argonne National Laboratory;
+emails: \href{mailto:kyle.niemeyer@oregonstate.edu}{kyle.niemeyer@oregonstate.edu}, \href{mailto:arfon@github.com}{arfon@github.com}, \href{mailto:d.katz@ieee.org}{d.katz@ieee.org}
 \end{bottomstuff}
 
 \maketitle
